--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   <section class="hero">
     <div class="hero-media" aria-hidden="true"></div>
     <div class="container hero-content">
+      <!-- Logo mobil -->
+      <img class="mobile-logo" src="./sonar-logo.png" alt="Trupa SONAR">
+      
       <div id="galerie" class="slideshow inline-hero" aria-label="Galerie foto SONAR">
         <button class="slide-nav prev" aria-label="Înapoi" data-dir="-1">&#10094;</button>
         <button class="slide-nav next" aria-label="Înainte" data-dir="1">&#10095;</button>
